# FRAP2025

./: .gitattributes  .gitignore  .zenodo.json  0.3.1  ADVANCED_GROUP_FITTING_GUIDE.md  ADVANCED_GROUP_FITTING_SUMMARY.md  ANALYTICAL_FEATURES_GUIDE.md  BUG_FIX_HOLISTIC_COMPARISON.md  BUG_FIX_IMAGE_ANALYSIS.md  BUG_FIX_MOBILE_FRACTION.md  BUG_FIX_MOBILE_IMMOBILE_FRACTIONS.md  BUG_FIX_PROFILE_COMPARISON.md  BUG_FIX_SESSION_SAVING_PICKLE_ERROR.md  BUG_FIX_ZIP_NESTED_STRUCTURE.md  BUG_FIX_ZIP_SUBFOLDERS.md  CHANGELOG.md  CITATION.cff  CLIanalysis.py  CODE_ANALYSIS_REPORT.md  CURVE_ALIGNMENT_IMPLEMENTATION.md  CURVE_ALIGNMENT_QUICK_REFERENCE.md  DELIVERY_SUMMARY.md  ERROR_FIXES_SUMMARY.md  FDR_IMPLEMENTATION_SUMMARY.md  FINAL_BUG_FIX_REPORT.md  FINAL_STATUS_REPORT.md  FORMULA_CORRECTIONS_SUMMARY.md  FRAP_Analysis_Report.html  FRAP_NORMALIZATION_ANALYSIS.md  FRAP_Report_20251128_105220.html  FRAP_Report_20251129_172218.html  FRAP_Report_20251130_134126.html  FRAP_Report_20251130_134642.html  FRAP_Report_20251130_140400.html  FRAP_Report_20251130_232142.html  FRAP_Report_20251130_234552.html  FRAP_Report_20251206_005700.html  FUNCTIONALITY_TEST_REPORT.md  HOLISTIC_COMPARISON_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_ADVANCED_FITTING.md  (+129 more)
data/: 265 GFP-PARP2-1.xls_-3499142597698190643  265 GFP-PARP2-10.xls_-2359307087249121650  265 GFP-PARP2-10.xls_-3676910561961370311  265 GFP-PARP2-11.xls_-919778809828082480  265 GFP-PARP2-11.xls_4768972367786037457  265 GFP-PARP2-12.xls_-5992934078469586453  265 GFP-PARP2-12.xls_5353917529703262228  (+1287 more)
frap2025/: __init__.py  cli.py  (+3 more)
(+176 files in other folders)
