[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frap2025"
version = "0.3.1"
requires-python = ">=3.11"
description = "FRAP kinetics analysis platform for quantitative cell biology"
license = { text = "MIT" }
authors = [{ name = "Michael Hendzel" }]

dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "plotly>=5.17",
    "seaborn>=0.13",
    "scikit-image>=0.22",
    "opencv-python>=4.8",
    "tifffile>=2023.7",
    "openpyxl>=3.1",
    "xlsxwriter>=3.1",
    "scikit-learn>=1.3",
    "sqlalchemy>=2.0",
    "reportlab>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
db = ["psycopg2-binary>=2.9"]
viz = ["dabest>=2023.2.14"]
advanced = [
    "torch>=2.3",
    "torchvision>=0.18",
    "POT>=0.9.4",
    "pyro-ppl>=1.9",
    "scikit-image>=0.23",
    "scipy>=1.13",
]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "black>=23.0", "mypy>=1.5"]

[project.scripts]
frap2025 = "frap2025.ui.app:main"
frap2025-cli = "frap2025.cli:main"

[tool.setuptools.packages.find]
include = ["frap2025*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = ["slow: slow-running tests (>2s)"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frap2025/ui/legacy_app.py"]
